--- a/web/proguard.conf
+++ b/web/proguard.conf
@@ -3,6 +3,7 @@
 -ignorewarnings
 -verbose
 -dontshrink
+-dontnote
 -dontoptimize
 -dontpreverify
 -keeppackagenames
@@ -51,4 +52,4 @@
     *** get*();
 }
 
--keep class !org.example.**
+-keep class !org.example.** {*;}
